Resolves: tdf#118221 whole cell kerning default is off

So set that at OutputDevice, there is no cell attribute for
kerning, all kerning on is handled by EditEngine output.

Change-Id: I23ac2b2cf59f3a4651cc9b614df03860a9cb9146
Reviewed-on: https://gerrit.libreoffice.org/56866
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins